# palette-convert

./: .gitignore  .gitmodules  README.md  pyproject.toml
.github/workflows/: build-release.yml  lint-check.yml
src/palette_convert/: cli.py  gimp.py  open_color.py  palette.py  scribus.py
src/palette_convert/readers/: __init__.py  open_color.py  reasonable_colors.py
src/palette_convert/writers/: __init__.py  gimp.py  libreoffice.py  scribus.py
src/scribus_swatches/: cli.py  palette.py  reasonable_colors.py  scribus.py
