[tool.poetry]
name = "scribus-swatches"
version = "0.1.0"
description = "A tool to convert color palettes to swatches for Scribus"
authors = ["Tehoor Marjan <tehoor.marjan@gmail.com>"]
readme = "README.md"
packages = [{include = "scribus_swatches", from = "src"}]
license = "CC0-1.0"
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: CC0 1.0 Universal (CC0 1.0) Public Domain Dedication",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14"
]

[tool.poetry.dependencies]
python = "^3.12"
colormath = "^3.0.0"
lxml = "^5.3.0"
click = "^8.1.8"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
scribus-swatches = "scribus_swatches.cli:main"
