[tool.poetry]
name = "palette_convert"
version = "0.1.0"
description = "A tool to convert color palettes to swatches for Scribus"
authors = ["Tehoor Marjan <tehoor.marjan@gmail.com>"]
readme = "README.md"
packages = [{include = "palette_convert", from = "src"}]
license = "CC0-1.0"
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: CC0 1.0 Universal (CC0 1.0) Public Domain Dedication",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14"
]

[tool.poetry.dependencies]
python = "^3.9"
colormath = "^3.0.0"
lxml = "^5.3.0"
click = "^8.1.8"

[tool.poetry.group.dev.dependencies]
isort = "^5.13.2"
black = "^24.10.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
palette-convert = "palette_convert.cli:main"

[tool.isort]
profile = "black"
line_length = 80

[tool.black]
line-length = 80
target-version = ["py39", "py310", "py311", "py312", "py313"]
